Fixing layout issues on project list

--- a/source/frontend/src/app/shared/header/header.component.scss
+++ b/source/frontend/src/app/shared/header/header.component.scss
@@ -36,7 +36,7 @@ header {
         border: 1px solid $mine-shaft;
         border-radius: 20px;
         top: 30px;
-        right: 20px;
+        right: 40px;
         cursor: pointer;
         display: none;
 
